--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
 		</div>
 		
 		<!-- Progress bar -->
-		<div class="progress-holder" style="display: block;">
-			<div class="progress-rate">30%</div>
-			<div class="progress progress-striped progress-upload active">
-				<div class="bar" style="width: 30%;"></div>
+		<div class="container progress-holder">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="progress-rate">--%</div>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+					    <span class="sr-only">--% Complete</span>
+					  </div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
@@ -241,6 +247,6 @@
 				})
 			})
 		</script>
-		<script src="js/live.js"></script>
+		<!--script src="js/live.js"></script-->
 	</body>
 </html>
