--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><strong>500px-like uploader</strong></a>
+					<a class="navbar-brand highlight" href="index.html"><strong>500px-like uploader</strong></a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
