--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="uploaded.html">Uploaded photos</a></li>
-						<li><a href="#about">About</a></li>
+						<li><a href="http://mrhieu.github.io/500pxupload/">About</a></li>
 					</ul>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 							</div>
 
 							<div class="row">
-								<label class="col-md-5 control-label">Taken</label>
+								<label class="col-md-5 col-xs-2 control-label">Taken</label>
 								{%
 									var dateTimeOriginal = o.DateTimeOriginal || o.DateTime || '';
 									if (dateTimeOriginal){
@@ -157,10 +157,10 @@
 									}
 								%}
 								
-								<div class="col-md-1"><i class="glyphicon glyphicon-calendar"></i></div>
-								<input type="text" class="col-md-3 input-sm instant-edit datepicker" name="photo[exif][taken][0]" placeholder="Set Date" value="{%=dateTimeOriginal?odate:''%}" readonly="true"/>
-								<div class="col-md-1"><i class="glyphicon glyphicon-time"></i></div>
-								<input type="text" class="col-md-2 input-sm instant-edit timepicker" name="photo[exif][taken][1]" placeholder="Set Time" value="{%=dateTimeOriginal?otime:''%}"/>
+								<div class="col-md-1 col-xs-1"><i class="glyphicon glyphicon-calendar"></i></div>
+								<input type="text" class="col-md-3 col-xs-3 input-sm instant-edit datepicker" name="photo[exif][taken][0]" placeholder="Set Date" value="{%=dateTimeOriginal?odate:''%}" readonly="true"/>
+								<div class="col-md-1 col-xs-1 col-xs-1"><i class="glyphicon glyphicon-time"></i></div>
+								<input type="text" class="col-md-2 col-xs-2 input-sm instant-edit timepicker" name="photo[exif][taken][1]" placeholder="Set Time" value="{%=dateTimeOriginal?otime:''%}"/>
 							</div>
 
 							<div class="form-group">
@@ -206,8 +206,8 @@
 						</div>
 						<div class="col-md-4">
 							<label class="label-main">MAP</label>
-							<div class="map">
-								<div class="map-canvas">
+							<div class="map row">
+								<div class="map-canvas col-md-12">
 									<img src="http://placehold.it/360x240&text=Googlemap"/>
 								</div>
 								<input type="text" class="form-control map-search" placeholder="Search for location..."/>
