--- a/index.html
+++ b/index.html
@@ -5,81 +5,109 @@
 		<link href="css/select2.css" rel="stylesheet" type="text/css">
 		<link href="css/datepicker.css" rel="stylesheet" type="text/css">
 		<link href="css/jquery.timepicker.css" rel="stylesheet" type="text/css">
+		<link href="css/snap.css" rel="stylesheet" type="text/css">
 		<link href="css/app.css" rel="stylesheet" type="text/css">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>500px style Photo uploader</title>
 	</head>
 	<body>
-		<!-- Header -->
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand highlight" href="index.html"><strong>500px-like uploader</strong></a>
-				</div>
-				<div class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li><a href="uploaded.html">Uploaded photos</a></li>
-						<li><a href="http://mrhieu.github.io/500pxupload/">About</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+		<!-- Off-canvas menu -->
+		<div class="snap-drawers">
+        <div class="snap-drawer snap-drawer-left">
+            <div class="side-menu">
+            		<h3>Menu</h3>
+                <div class="list-group">
+					        <a href="#" class="list-group-item active">
+					          <h4 class="list-group-item-heading">500px-like uploader</h4>
+					          <p class="list-group-item-text">Main page</p>
+					        </a>
+					        <a href="uploaded.html" class="list-group-item">
+					          <h4 class="list-group-item-heading">Uploaded photos</h4>
+					          <p class="list-group-item-text">Photos that you uploaded. Note that only you with only this device can see them.</p>
+					        </a>
+					        <a href="http://mrhieu.github.io/500pxupload/" class="list-group-item">
+					          <h4 class="list-group-item-heading">About</h4>
+					          <p class="list-group-item-text">See this project on Github</p>
+					        </a>
+					      </div>
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right"></div>
+    </div>
 		
-		<!-- Progress bar -->
-		<div class="container progress-holder">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="progress-rate">--%</div>
-					<div class="progress">
-					  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-					    <span class="sr-only">--% Complete</span>
-					  </div>
+		<!-- Main page -->
+		<div id="content-wrapper" class="snap-content">
+			<!-- Header -->
+			<div class="navbar navbar-inverse navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+						<button id="open-left" type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target=".navbar-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand highlight" href="index.html"><strong>500px-like uploader</strong></a>
+					</div>
+					<div class="navbar-collapse collapse hidden-xs hidden-md">
+						<ul class="nav navbar-nav">
+							<li><a href="uploaded.html">Uploaded photos</a></li>
+							<li><a href="http://mrhieu.github.io/500pxupload/">About</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
-		</div>
-		
-		<!-- Drag zone -->
-		<div class="container text-center start-zone">
-			<form id="fileupload" action="server/post.php" method="POST" enctype="multipart/form-data">
-				<input type="file" id="input-browse" class="block-hide" multiple="multiple" name="files">
-				<p>Drag photos from your computer in here. Select as many as you want.</p>
-				<div class="help-block">Anyway, you can kill your browser with dropping 10 files in a row with 10MB each (o.O)</div>
-				<p>You can also <a class="browse_files" href="#">browse</a> for photos to upload.</p>
-			</form>
-		</div>	
-
-		<div class="uploader block-hide">
-			<!-- Preview zone -->
-			<div class="container preview-zone">
-				<img src="img/mask-tran.png"/>
-			</div>
-
-			<!-- Thumbnail zone -->
-			<div class="container thumbnail-zone">
+			
+			<!-- Progress bar -->
+			<div class="container progress-holder">
 				<div class="row">
-					<div class="col-md-9">
-						<ul class="thumbnails-holder nav nav-tabs" id="myTab"></ul>
-					</div>
-
-					<div class="actions col-md-3 text-right">
-						<button type="button" class="btn btn-danger btn-remove"><i class="glyphicon glyphicon-trash"></i> remove</button>
-						<!-- <button type="button" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk"></i> save</button> -->
-						<button type="button" class="btn btn-primary btn-upload"><i class="glyphicon glyphicon-open"></i> upload</button>
-						<p class="help-block"><span class="readyphoto"></span>/<span class="totalphoto"></span> photos are ready</p>
+					<div class="col-md-8 col-md-offset-2">
+						<div class="progress-rate">--%</div>
+						<div class="progress">
+						  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+						    <span class="sr-only">--% Complete</span>
+						  </div>
+						</div>
 					</div>
 				</div>
 			</div>
+			
+			<!-- Drag zone -->
+			<div class="container text-center start-zone">
+				<form id="fileupload" action="server/post.php" method="POST" enctype="multipart/form-data">
+					<input type="file" id="input-browse" class="block-hide" multiple="multiple" name="files">
+					<p>Drag photos from your computer in here. Select as many as you want.</p>
+					<div class="help-block">Anyway, you can kill your browser with dropping 10 files in a row with 10MB each (o.O)</div>
+					<p>You can also <a class="browse_files" href="#">browse</a> for photos to upload.</p>
+				</form>
+			</div>	
 
-			<!-- Edit zone -->
-			<div class="container-fluid tab-content edit-zone-holder"></div>
+			<div class="uploader block-hide">
+				<!-- Preview zone -->
+				<div class="container preview-zone">
+					<img src="img/mask-tran.png"/>
+				</div>
 
+				<!-- Thumbnail zone -->
+				<div class="container thumbnail-zone">
+					<div class="row">
+						<div class="col-md-9">
+							<ul class="thumbnails-holder nav nav-tabs" id="myTab"></ul>
+						</div>
+
+						<div class="actions col-md-3 text-right">
+							<button type="button" class="btn btn-danger btn-remove"><i class="glyphicon glyphicon-trash"></i> remove</button>
+							<!-- <button type="button" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk"></i> save</button> -->
+							<button type="button" class="btn btn-primary btn-upload"><i class="glyphicon glyphicon-open"></i> upload</button>
+							<p class="help-block"><span class="readyphoto"></span>/<span class="totalphoto"></span> photos are ready</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- Edit zone -->
+				<div class="container-fluid tab-content edit-zone-holder"></div>
+
+			</div>
 		</div>
 
 		<script type="text/x-tmpl" id="tmpl-uploadThumbnail">
@@ -235,6 +263,7 @@
 		<script src="js/select2.min.js"></script>
 		<script src="js/bootstrap-datepicker.js"></script>
 		<script src="js/jquery.timepicker.js"></script>
+		<script src="js/snap.min.js"></script>
 		<script src="js/app.js"></script>
 		<!--script src="js/live.js"></script-->
 	</body>
